--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -155,8 +155,9 @@ kbd:[↑] and kbd:[↓] keys on your keyboard. You can call back up to 20 comman
 *Command Format*
 
 * Words that are enclosed with `<` and `>` are the parameters to be supplied by you e.g. in `set reminder|<index>|<reminder threshold>`, `<index>` and `<reminder threshold>` are parameters which can be used as `set reminder|1|7`.
+* Tags are recognised with the prefix `#` on the CLI. e.g. Xpire recognises `Fruit` as a name while `#Fruit` as a tag.
 * Parameters in square brackets are optional e.g `check[|<days>]` can be used as `check|7` or `check`.
-* Optional parameters with `…`​ after them can be used multiple times including zero times. For example, for [<other tags>]..., the following format for Tag Command: `tag|<index>|<tag>[<other tags>]...` can be used as `tag|1|#Fruit #Frozen #Cold` or `tag|1|#Fruit`.
+* Optional parameters with `…`​ after them can be used multiple times including zero times. e.g. for [<other tags>]..., the following format for Tag Command: `tag|<index>|<tag>[<other tags>]...` can be used as `tag|1|#Fruit #Frozen #Cold` or `tag|1|#Fruit`.
 * Trailing `|` (s) are allowed. e.g. `add|banana|2/2/2020|||` or `sort|name|`.
 ====
 
@@ -311,12 +312,28 @@ For items with single quantity, you can save time by keying in only the item nam
 
 // end::shift[]
 
-
 // tag::clear[]
 ==== Clearing all entries : `clear`
 
-Clears all entries from the current list that is displayed. +
+Want a quick way of deleting all the items in the current view list?
+You can simply type `clear` and all items in the current view list will be deleted immediately.
+
 Format: `clear`
+
+[NOTE]
+`clear` is designed to work only on the current view list. In other words, `clear` will only
+delete all items which exists in the current view list.
+
+Example:
+
+* While on the current view list (see Figure 10), input `clear` to remove all items in the list (see Figure 11)
+
+.Items in the current view list
+image::clear-before.png[width="790"]
+
+.All items in the list have been deleted.
+image::clear-after.png[width="790"]
+
 // end::clear[]
 
 // tag::export[]
