--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -363,40 +363,21 @@ operations are called only from within Bin.
 ==== Implementation
 
 To allow users to view the list of previously entered commands, a command history mechanism is implemented, which
-lists down all the previous commands entered by the user from the point of starting the application. This feature
-can be accessed using the `history` command, and it does not show invalid commands or the commands which were autocorrected
-into valid ones. The feature is supported by the `CommandHistory` class, an instance of which is stored as one of the
+lists down all the previous (valid) commands entered by the user from the point of starting the application. Commands entered
+while merging are not added. The feature is supported by the `CommandHistory` class, an instance of which is stored as one of the
 memory objects inside `ModelManager`. The main operations implemented by this class are:
 
 * `addCommand(commandWord, commandText)` -- Adds the command with the command word `commandWord` and full command text
 `commandText` into the list of previously entered commands `userInputHistory`.
-* `getHistory()` -- Reverses the list of previously entered commands and returns it.
-
-image::CommandHistoryClassDiagram.png[]
+* `getHistory()` -- Reverses the list of previously entered commands and returns the list.
 
 The history view is accompanied by its associated `HistoryCard` and `HistoryListPanel` FXML. These views share a common CSS
 with other FXML files.
-
-Given below is an example usage scenario and how the command history mechanism works at each step.
-
-Step 1. The user enters the `history` command to display the list of previously entered commands, starting from
-the most recent. This results in `HistoryCommand::execute()` returning a `CommandResult` with the `listHistory` attribute
-set as true.
-
-Step 2. The `CommandResult` object is then passed into `MainWindow` through `LogicManager`.
-
-Step 3. The `MainWindow` creates a new `HistoryListPanel` object with the list of commands as `logic.getHistoryList()`.
 
 Following is the sequence diagram that shows the interaction between different components of the app when the command
 `history` is typed in by the user:
 
 image::CommandHistorySequenceDiagram.png[]
-
-Step 4. The `HistoryListPanel` object then initialises all the attributes of the associated FXML object, following which this
-component is placed in the secondary panel display.
-
-Step 5. Finally, the `MainWindow` calls `StackPane::getChildren::add` to add `HistoryListPanel::getRoot` to place the
-history list panel into the secondary display screen.
 
 ==== Design Considerations
 
@@ -406,7 +387,7 @@ history list panel into the secondary display screen.
 ** Pros: Since the user input is being parsed in `LogicManager`, storing the command history ensures that data is
 not being passed around between the `LogicManager` and the `ModelManager`.
 ** Cons: By right the `LogicManager` is only concerned with handling logic, any data storage should be performed in
-`ModelManager`. Storing command history here would violate Single Responsibility Principle and Separation of Concerns.
+`ModelManager`. Violates Single Responsibility Principle and Separation of Concerns.
 
 * **Alternative 2 (current choice):** Place the `CommandHistory` object in model manager, parse user input in
 `LogicManager` and pass it to `ModelManager`.
@@ -421,9 +402,9 @@ not being passed around between the `LogicManager` and the `ModelManager`.
 ** Cons: Which commands are relevant depends on the user, moreover limits the application of command history
 feature to undo/redo application.
 
-* **Alternative 2:** Display every valid command entered by the user
-** Pros: More accurate representation of command history, every command entered is a part of the history
-** Cons: Clutters the command history with unnecessary commands like `history` and `undo`.
+* **Alternative 2 (current choice):** Display every valid command entered by the user
+** Pros: More accurate representation of command history.
+** Cons: Clutters the command history with potentially unnecessary commands.
 // end::history[]
 
 // tag::undoredo[]
@@ -431,30 +412,19 @@ feature to undo/redo application.
 ==== Implementation
 
 To allow users to revert/return to a previous/future state of the address book, an undo/redo mechanism is implemented, which
-undoes/redoes the last data change made in the application. This feature can be performed using the `undo` or `redo`
-command, and it performs an undo or a redo only when possible. The feature is supported by the `StatefulAddressBook` class,
-an instance of which is stored as one of the memory objects inside `ModelManager`. The main operations implemented by this class are:
-
-* `StatefulAddressBook#saveAddressBookState()` -- Adds an address book with the current state to the list `statefulAddressBookList`. Also
-clears states after the `currentStatePointer` and updates it by one.
-* `StatefulAddressBook#undo()` -- Reverts the `currentStatePointer` to the previous one, and resets the address book to use the one pointed
-by `currentStatePointer`.
-* `StatefulAddressBook#redo()` -- Increments the `currentStatePointer` to the future one, and resets the address book to use the one pointed
-by `currentStatePointer`.
+undoes/redoes the last data change made in the application. The feature is supported by the `StatefulAddressBook` class,
+an instance of which is stored as one of the memory objects inside `ModelManager`.
 
 image::UndoRedoClassDiagram.png[]
 
 Given below is an example usage scenario and how the undo-redo mechanism works at each step. Let us assume that `StatefulAddressBook` has just been initialised.
-
-image::UndoRedoState0.png[]
 
 Step 1. The user makes some data changes. This adds a list of states to our `StatefulAddressBook`, and updates the
 `currentStatePointer`.
 
 image::UndoRedoState1.png[]
 
-Step 2. User types `undo`. This invokes the `UndoCommand::execute` method, which further invokes the `StatefulAddressBook::undo`
-method. The `currentStatePointer` is decremented, and the address book is reset to the one being pointed to by
+Step 2. User types `undo`. The `currentStatePointer` is decremented, and the address book is reset to the one being pointed to by
 `currentStatePointer`.
 
 image::UndoRedoState2.png[]
@@ -464,20 +434,15 @@ and a new state is added.
 
 image::UndoRedoState3a.png[]
 
-Step 3b. If a command which does not perform a data change is called, nothing happens in the `StatefulAddressBook`.
-
-image::UndoRedoState3b.png[]
-
-Step 3c. If a `redo()` is called, then the `currentStatePointer` is incremented, and the address book is reset to the one
-being pointed to by `currentStatePointer`.
+Step 3b. If a command which does not perform a data change is called, `StatefulAddressBook` stays the same
+as seen in `Step 2`. If a `redo()` is called, then the `currentStatePointer` is incremented.
 
 image::UndoRedoState3c.png[]
 
 Step 4. If the address book data is reset to another state's, then all the data inside the application is reloaded, with
 the resulting changes now reflected.
 
-Following is an activity diagram which shows the execution when the user makes in a data change or types in the `undo`
-command. The diagram for a `redo` command will be similar.
+Following is the activity diagram. The diagram for a `redo` command will be similar.
 
 image::UndoActivityDiagram.png[]
 
@@ -498,25 +463,7 @@ is changed.
 ** Pros: Will use less memory (e.g. for delete, just save the person list).
 ** Cons: We must ensure that the implementation of each individual command are correct. Several cases to consider
 when we try to undo a command.
-
-===== Aspect: Data structure to support the undo/redo commands
-
-* **Alternative 1 (current choice):** Use a list to store the history of address book states.
-** Pros: Easy for new Computer Science student undergraduates to understand, who are likely to be the new incoming
-developers of our project.
-** Cons: Logic is duplicated twice. For example, when a new command is executed, we must remember to update both
-HistoryManager and VersionedAddressBook.
-
-* **Alternative 2:** Use HistoryManager (a history of commands) for undo/redo
-** Pros: We do not need to maintain a separate list, and just reuse what is already in the codebase.
-** Cons: Requires dealing with commands that have already been undone: We must remember to skip these commands.
-Violates Single Responsibility Principle and Separation of Concerns as HistoryManager now needs to do two different things.
 // end::undoredo[]
-
-// tag::dataencryption[]
-=== [Proposed] Data Encryption
-
-_{Explain here how the data encryption feature will be implemented}_
 
 // end::dataencryption[]
 
