--- a/docs/ContactUs.adoc
+++ b/docs/ContactUs.adoc
@@ -4,4 +4,4 @@
 
 * *Bug reports, Suggestions* : Post in our https://github.com/AY1920S1-CS2103T-T13-1/main/issues[issue tracker] if you noticed bugs or have suggestions on how to improve.
 * *Contributing* : We welcome pull requests. Follow the process described https://github.com/oss-generic/process[here]
-* *Email us* : You can also reach us at `iskandar [at] u.nus.edu.sg`
+* *Email us* : You can also reach us at `iskandar@u.nus.edu.sg`
