--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -486,63 +486,138 @@ You can then run `sort rate` to obtain the list of donors with higher success ra
 // end::sort[]
 
 // tag::process[]
+
 === Processing potential matches: `processing`
-//TODO: change to shorter term that captures the meaning
 
-After finding a list of matches, the hospital is free to schedule a cross-matching test between
-a specific donor and patient. +
+After finding a list of matches, the hospital will be able to schedule a cross-matching test between
+a specific donor and patient.
+To schedule a cross-matching test, there will be a lot of other administrative tasks to be done.
+Hence, this command will be able to allow you to have an overview on what kind of tasks you need to do for that
+particular pair of donor and patient before the cross-matching.
 
-After typing this command, the following changes occur:
+==== `Status` of the donor and patient pair
 
-* A list will be generated to show the necessary tasks the hospital need to do for the respective donor and patient.
-* The list will be unique to the specific donor and patient pair
-* The list can be updated using `done** TASK NUMBER**` +
+You can also view the current state of every donor and patient in ORGANice by looking at their `Status`.
 
-The list will be saved after the command `exit` is executed. The page will then stop displaying the list.
+The `Status` of patient and donor can be either `Not Processing`, `Processing` or `Done`.
+
+* `Not Processing` : The current donor or patient is not yet matched with anyone and is not going for any cross-matching test yet.
+
+* `Processing` : The current donor or patient found a match already and is in the midst of preparing for a cross-matching test.
+
+* `Done` : The current donor or patient have completed the cross-matching and the result of the cross-matching shows a positive result.
+Hence, this donor or patient does not need to be in ORGANice anymore.
+
+All the patients and donors should be `Not Processing` initially.
+When the command is used for the first time for the patient and donor pair, the `Status` of the patient and donor will change from `Not Processing` to `Processing`.
+If the patient and donor is being processed, their `Status` will remain `Processing`.
+
+==== Task list for the donor and patient
+
+This command will show you the task list for the `Processing` donor and patient for you to be able to keep track of the necessary standard of procedure easily.
+
+Currently you can:
+
+* Generate a default task list automatically for newly processed patient and donor if they are `Not Processing` initially.
+
+* View the list which belongs to the patient and donor pair who are already `Processing`.
+
+* Mark a task as done in the task list generated from the patient and donor using another command
+`processingMarkDone ic/**PATIENT NRIC** ic/**DONOR NRIC** **TASK NUMBER**`
+which will be explained further later.
+
+==== `Processing` the donor and patient
+
+When you use this command, the following will occur:
+
+* A default task list will be generated to show the necessary tasks the hospital needs to do for the respective donor and patient.
+
+* The task list will be unique to the specific donor and patient.
+
+* The task list can be updated using another command,`processingMarkDone ic/**PATIENT NRIC** ic/**DONOR NRIC** **TASK NUMBER**`
+
+* The task list will be saved automatically.
+
+* A donor can only be in `Processing` state with only one patient and vice versa.
+This means, if a donor and a patient is already in `Processing` state, they will not be able to be processed with another donor or patient.
+
+* A screenshot of the list generated can be shown below:
+
+.Screenshot of the screen after you use the command on a valid donor and patient
+
+image::processing.png[width="790"]
 
 Format: `processing ic/**PATIENT NRIC** ic/**DONOR NRIC**` +
-The order of the NRICs does not matter.
+The order of the NRICs does not matter, as long as the patient and the donor must be valid.
 
 Example:
-`processing ic/S6764235G ic/S1234567D`
+`processing ic/S6764235G ic/S5234567D`
+
 // end::process[]
 
 // tag::mark[]
+
+=== Checking the task list : `processingMarkDone`
+
+As introduced above, this command serves to help you mark a task on the task list as done.
+This will allow you to be able to know what other administrative things you need to do
+for the specific donor and patient before the cross-matching test.
+Beside each task on the task list, there will be either a cross, ✘, or a tick, ✓.
+A tick would mean that the task is completed and a cross will mean that the task has not yet been completed.
+
+.Screenshot of the screen after you use the command on a valid donor and patient and a valid task number
+
+image::processingMarkDone.png[width="790"]
+
+Format: `processingMarkDone ic/**PATIENT NRIC** ic/**DONOR NRIC** **TASK NUMBER**` +
+The order of the NRICs does not matter, as long as the task number, patient and donor must be valid.
+The donor and patient need to be in `Processing` state to be considered valid.
+
+Example:
+`processingMarkDone ic/S6764235G ic/S5234567D 1`
+
+// end::process[]
+
+// tag::mark[]
+
 === Mark as done : `done`
 
 After the hospital has the results of the cross matching test, they can
-update the results in ORGANice. Cross matching tests have two possible results: pass or fail.
+update the results in ORGANice.
+Cross matching tests have two possible results: pass or fail.
 
-Format: `done icP/**NRIC OF PATIENT** icD/**NRIC OF DONOR** res/[pass/fail]`
-
-`icP/**NRIC OF PATIENT**` refers to the NRIC of the patient, while `icD/**NRIC OF DONOR**`
-refers to the NRIC of the donor.
+Format: `done ic/**PATIENT NRIC** ic/**DONOR NRIC** res/[pass/fail]`
+The order of the NRICs does not matter, as long as the patient and the donor must be valid.
 
 The following section outlines what happens based on the two results: +
 
 If the result of the cross matching is a 'pass':
 
-. It is up to the hospital staff to schedule an organ transplant surgery
+. Run the command based on the given format
+. It is up to the you to schedule an organ transplant surgery
 between the patient and donor.
-. Mark the patient and donor as 'done', based on the command format.
-. After running the command, the system removes the patient and donor from the matching pool.
-The patient and donor statuses will be marked to 'done'.
+. Mark the patient and donor as `Done`, based on the command format.
+. The patient and donor statuses will be marked as `Done`.
+. After running the command, the system removes the patient and donor from ORGANice.
 
 
 If the result of the cross matching is a 'fail': +
 
 . Run the command based on the given format
 
-. The patient and donor will be added back to the matching pool for
+. The donor and patient will be added back to the matching pool for
 match detection with other patients and donors.
 
-. The patient-donor pair will not be considered a potential match in future match detection.
+. The patient and donor statuses will be marked as `Not Processing`.
+
+. The donor and patient pair will not be considered a potential match in future match detection.
 
 
 Example:
 
-* `done icP/S7896432A icD/S4578902G res/pass`
-* `done icP/S7896432A icD/S4578902G res/fail`
+* `done ic/S6764235G ic/S5234567D res/pass`
+* `done ic/S6764235G ic/S5234567D res/fail`
+
 // end::mark[]
 
 === Exiting the program : `exit`
