--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -254,28 +254,28 @@ This is a feature which allows you to view all available commands matching the i
 ==== Implementation
 
 The autocomplete mechanism is facilitated by the `KeyListener` and a `Trie`, a tree-like abstract data type (ADT). (Explained below)
-The `KeyListener` passes the current input text in the input command box to the `TrieManager` via `LogicManager#getAutoCompleteResults`.
-The `TrieManager` calls `Trie#autoCompleteCommandWord` and a sorted list of matching commands is passed back to the `CommandBox` and is displayed on the `Ui` via a dropdown box below the user input command box.
+The `KeyListener` passes the current input text in the input command box to the `TrieManager` via `LogicManager#getAutoCompleteResults()`.
+The `TrieManager` calls `Trie#autoCompleteCommandWord()` and a sorted list of matching commands is passed back to the `CommandBox` and is displayed on the `Ui` via a dropdown box below the user input command box.
 
 The underlying data structure used is a directed `Graph` with the `Trie` as a `Node` and `HashMap<Character, Trie>` to represent all outgoing edges.
 The `Keys` in the `HashMap` are `Characters` in the command words while the `Values` are the `Tries` containing the subsequent `Characters` in the command words.
-Each `Trie` contains a `List<String>` of command words, which is returned when `Trie#autoCompleteCommandWord` is called.
+Each `Trie` contains a `List<String>` of command words, which is returned when `Trie#autoCompleteCommandWord()` is called.
 
 Given below is an example usage scenario and how the autocomplete mechanism behaves at each step.
 
-Step 1: You launch the application. The `TrieManager` initializes the respective `Tries` with their context-specific command words using `Trie#insertCommand`.
+Step 1: You launch the application. The `TrieManager` initializes the respective `Tries` with their context-specific command words using `Trie#insertCommand()`.
 The `Trie` adds each `Character` of the input `String` and new `Tries` into the `HashMap<Character, Trie>`, as well as the command word into the `List<String>`, recursively as illustrated by the activity diagram below.
 
 image::AutoCompleteActivityDiagram.png[width="790"]
 
 Step 2: You want to add an order to the database, however are uncertain how to spell the command and type in `_‘order’_`.
 The `KeyListener` passes the `String` in the `CommandBox` to the `Trie` via the `LogicManager` and `TrieManager`.
-The trie searches for relevant commands and pass them as a list back to the `CommandBox` via `Trie#getAutoCompleteCommandWord`, `Trie#search` and `Trie#getAllCommandWords`.
+The trie searches for relevant commands and pass them as a list back to the `CommandBox` via `Trie#getAutoCompleteCommandWord()`, `Trie#search()` and `Trie#getAllCommandWords()`.
 The ‘Ui’ displays the relevant results in a dropdown box below the user input command box.
 
+.Sequence diagram illustrating the handling of user input via autocomplete
 image::AutoCompleteSequenceDiagram.png[width="790"]
 
-*insert label for seq diagram - Sequence diagram illustrating step 2*
 
 Step 3: You can now complete the command you want by entering the relevant command shown in the dropdown box.
 
@@ -303,7 +303,7 @@ replace with something else
 ** Cons: Tedious to implement, as `Tries` are not currently implemented in Java.
 * **Alternative 2:** Use a list to store all current commands.
 ** Pros: Easy to implement as lists are already available in Java.
-** Cons: Inefficient and slow searching, because of the need to iterate through the entire list of commands while calling ‘.substring()’ and ‘.contains()’ methods.
+** Cons: Inefficient and slow searching, because of the need to iterate through the entire list of commands while calling `.substring()` and `.contains()` methods.
 
 Alternative 1 was selected, as it allows for faster searching and listing of relevant commands compared to alternative 2.
 
